crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_035.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 40
payload:
  Map:
    arena_id: 1
    blob:
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 47
      - 62
      - 246
      - 127
      - 0
      - 0
      - 244
      - 40
      - 14
      - 0
      - 2
      - 0
      - 76
      - 233
      - 68
      - 235
      - 164
      - 129
      - 196
      - 1
      - 0
      - 0
      - 8
      - 14
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 54
      - 235
      - 164
      - 129
      - 196
      - 1
      - 0
      - 0
      - 0
      - 0
      - 7
      - 68
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 250
      - 195
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 22
      - 235
      - 164
      - 129
      - 196
      - 1
      - 0
      - 0
      - 53
      - 0
      - 0
      - 1
      - 0
      - 2
      - 0
      - 3
      - 0
      - 4
      - 0
      - 5
      - 1
      - 6
      - 1
      - 7
      - 1
      - 8
      - 1
      - 9
      - 0
      - 10
      - 0
      - 11
      - 0
      - 12
      - 0
      - 13
      - 0
      - 14
      - 0
      - 15
      - 0
      - 16
      - 0
      - 17
      - 0
      - 18
      - 0
      - 19
      - 0
      - 0
      - 12
      - 0
      - 255
      - 21
      - 128
      - 17
      - 22
      - 0
    map_name: spaces/22_tierra_del_fuego
    matrix:
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
    space_id: 3802
    unknown: 1
    unknown1: 4067622914
    unknown2: 3443757066
