crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_037.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 968079
    entity_type: Vehicle
    position:
      x: -80
      y: 0
      z: -500
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
        - enabled: 1
          id: 4
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - - 12
            - 14
            - 21
            - 23
            - 40
            - 42
            - 61
          - - 3
            - 6
            - 12
            - 13
            - 17
            - 21
            - 23
            - 28
          - - 9
            - 12
            - 18
            - 20
            - 23
            - 25
          - []
          - []
        paramsId: 4187138032
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 101150
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 101150
      maxServerSpeedRaw: 772821
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 968078
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 240
        - 55
        - 31
        - 224
        - 51
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 240
        - 47
        - 220
        - 194
        - 240
        - 175
        - 239
        - 194
        - 0
        - 0
        - 0
        - 0
        - 240
        - 175
        - 246
        - 194
        - 240
        - 175
        - 237
        - 194
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 50
        - 255
        - 176
        - 207
        - 130
        - 254
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 34
        - 254
        - 9
        - 0
        - 0
        - 0
        - 176
        - 239
        - 169
        - 243
        - 176
        - 111
        - 141
        - 255
        - 176
        - 111
        - 61
        - 255
        - 176
        - 111
        - 125
        - 255
        - 176
        - 111
        - 221
        - 254
        - 176
        - 111
        - 237
        - 254
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 29
        - 254
        - 176
        - 111
        - 253
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 82
        - 255
        - 176
        - 159
        - 34
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 176
        - 239
        - 159
        - 254
        - 176
        - 239
        - 255
        - 253
        - 176
        - 239
        - 95
        - 253
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 58
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 1
      torpedoLocalPos: 4480
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4480
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 2
    state_length: 479
    vehicle_id: 3802
