crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_038.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 968077
    entity_type: Vehicle
    position:
      x: -560
      y: 0
      z: -450
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 3
            - 8
            - 17
            - 19
            - 20
            - 21
            - 35
            - 63
            - 66
          - []
          - []
          - []
        paramsId: 4293044016
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 58000
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 58000
      maxServerSpeedRaw: 853469
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 968076
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 48
        - 183
        - 14
        - 249
        - 44
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 48
        - 47
        - 44
        - 199
        - 48
        - 175
        - 63
        - 199
        - 48
        - 47
        - 70
        - 199
        - 48
        - 175
        - 54
        - 199
        - 48
        - 175
        - 45
        - 199
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 98
        - 254
        - 176
        - 207
        - 194
        - 253
        - 176
        - 207
        - 2
        - 255
        - 1
        - 0
        - 0
        - 0
        - 176
        - 111
        - 104
        - 248
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 242
        - 254
        - 176
        - 159
        - 34
        - 255
        - 176
        - 159
        - 82
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 1
        - 0
        - 0
        - 0
        - 176
        - 239
        - 125
        - 238
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 176
        - 239
        - 159
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 16
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 1
      torpedoLocalPos: 4480
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4480
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 2
    state_length: 436
    vehicle_id: 3802
