crates/wows-replays/tests/snapshots/20260213_143518_PASB110-Vermont_22_tierra_del_fuego/packet_snapshots__packet_040.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 321812
    entity_type: InteractiveZone
    position:
      x: 355
      y: 0
      z: 0
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 60
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 1
          isVisible: 1
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 2
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 69
        - 52
        - 70
        - 69
        - 51
        - 66
        - 55
        - 67
        - 46
        - 52
        - 66
        - 50
        - 67
        - 54
        - 48
        - 66
        - 68
        - 46
        - 53
        - 69
        - 55
        - 52
        - 49
        - 51
        - 66
        - 57
        - 46
        - 52
        - 65
        - 48
        - 56
        - 48
        - 49
        - 66
        - 50
      ownerId: 0
      radius: 110
      teamId: -1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 3802
